# go-quicraft

./: .dockerignore  .gitignore  .golangci.yml  CHANGELOG.md  Makefile  README.md  go.mod  go.sum
.devcontainer/: Dockerfile  Dockerfile.dev  Dockerfile.integration  devcontainer.json  docker-compose.integration.yml  docker-compose.yml  entrypoint.sh
.github/workflows/: ci.yml  release.yml
contrib/dragonboat/: Makefile  README.md  errors.go  errors_test.go  go.mod  go.sum  membership.go  membership_test.go  nodehost.go  nodehost_test.go  requeststate.go  requeststate_test.go  target.go
docs/: README.md
docs/api/: reference.md
docs/architecture/: overview.md
docs/discovery/: bootstrap.md
docs/engine/: pipeline.md
docs/operations/: deployment.md  lifecycle.md
docs/performance/: architecture.md
docs/protocol/: wire-format.md
docs/raft/: protocol.md
docs/security/: encryption.md
docs/sessions/: deduplication.md
pkg/: bench_test.go  errors.go  errors_test.go  host.go  host_test.go  info.go  info_test.go  log_reader.go  membership.go  membership_test.go  messagehandler.go  messagehandler_test.go  metrics.go  metrics_prometheus.go  metrics_prometheus_test.go  metrics_test.go  requeststate.go  requeststate_lifecycle_test.go  requeststate_test.go  session.go  session_test.go  snapshot_option.go  snapshot_option_test.go  snapshot_sender_test.go
test/performance/openraft/: Cargo.toml  Dockerfile
test/performance/openraft/src/: bench.rs  cluster.rs  main.rs  network.rs  result.rs  scenarios.rs  sharded_disk_store.rs  store.rs  transport.rs  types.rs
(+389 files in other folders)
